--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=adoptapet
 
-spring.datasource.url=jdbc:mysql://mysql:3306/adoptapetdb
-spring.datasource.username=adoptapet
-spring.datasource.password=adoptapet
+# Para que funcione tanto local (Docker) como en Render:
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://mysql:3306/adoptapetdb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:adoptapet}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:adoptapet}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -12,3 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.mode=never
 spring.sql.init.encoding=utf-8
 spring.jpa.defer-datasource-initialization=true
+
+# Render usa una variable PORT para asignar el puerto dinámicamente:
+server.port=${PORT:8080}
