--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,20 @@
 spring.application.name=adoptapet
 
-# Para que funcione tanto local (Docker) como en Render:
+# Datasource: por defecto MySQL (Docker local), pero en Render usare variables de entorno
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://mysql:3306/adoptapetdb}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:adoptapet}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:adoptapet}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Driver y dialecto para Postgres (Render)
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.sql.init.mode=never
 spring.sql.init.encoding=utf-8
 spring.jpa.defer-datasource-initialization=true
 
-# Render usa una variable PORT para asignar el puerto dinámicamente:
+# Render usa PORT, en local 8080
 server.port=${PORT:8080}
